--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:mariadb://localhost:3306/mydb
+spring.datasource.username=myadmin
+spring.datasource.password=whdrjffbs12!
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=create-drop
+#서버가 돌아갈때 마다 테이블이 생성-삭제됨
+#H2 DB와 같은 인메모리 DB쓸때는 해도 되는데 실제 환경에서는 사용 X
