--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-devtools:2.4.5'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.2'
 	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
-
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.6.2'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
