--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/mydb
+spring.datasource.url=jdbc:mariadb://localhost:3306/mydb?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=myadmin
 spring.datasource.password=whdrjffbs12!
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
